# TextBuffer-with-Doubly-Linked-List

./: CMakeLists.txt  README.md  TextBuffer.cpp  TextBuffer.h
project/: TextBuffer.h  main.cpp
src/: TextBuffer.cpp  main.cpp
test/: mytest.cpp  mytest.h  sample_list.h
test_by_ggtest/: CMakeLists.txt  mytest.cpp  unittest_doubly_linked_list.cpp  unittest_text_buffer.cpp
